# MFR

./: .actrc  .autofix.yml  .env.development  .env.local.example  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage  .markdownlint.yml  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .trufflehog-exclude  .trufflehog-exclude.txt  .trufflehog.yaml  .yamlfmt  .yamllint.yml  CLAUDE.md  CLAUDE2.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_SUMMARY.md  Dockerfile  Dockerfile.dev  FIXES_APPLIED.md  FUNCTION_SIGNATURE_FIXES.md  ISSUES_SUMMARY.md  Makefile  NOTES.md  NOTICE  PIPELINE_SAFETY_REDESIGN.md  PROJECT_AUDIT_REPORT.md  README.md  REFACTORING_PLAN.md  SAFE_EXECUTION_GUIDE.md  SECURITY.md  SECURITY_SETUP.md  SEQUENTIAL_PRECOMMIT_SETUP.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-06-23.md  SESSION_SUMMARY_2025-06-25.md  (+25 more)
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  lint.yml  nightly.yml  pr-checks.yml  pre-commit-sequential.yml  pre-commit.yml  prfix.yml  release.yml  security-scan.yml  security.yml  super-linter.yml  uv-lock-check.yml
.pre-commit-wrappers/: memory-limited-hook.sh  trufflehog-limited.sh
docker/: Dockerfile.test  test-profiles.env
docker/sequential-precommit/: Dockerfile  docker-compose.yml
licenses/: README.md
scripts/: docker-cleanup.sh  docker-test.sh  ensure-sequential.sh  monitor-queue.sh  run-tests-docker.sh  safe-run.sh  seq  sequential-executor.sh  setup-github.sh  test-with-act.sh  test-workflow-cancellation.sh  test-workflows.sh  yamlfmt.sh
src/mass_find_replace/: __init__.py  __main__.py  file_system_operations.py  mass_find_replace.py  replace_logic.py  test_config.py
src/mass_find_replace/cli/: __init__.py  parser.py
src/mass_find_replace/cli/parser_modules/: __init__.py  argument_parser.py  argument_processor.py  dependency_checker.py  self_test.py  subprocess_runner.py
src/mass_find_replace/core/: __init__.py  config.py  constants.py  exceptions.py  file_processor.py  scanning.py  transaction_executor.py  transaction_manager.py  transaction_orchestrator.py  types.py
src/mass_find_replace/core/orchestrator/: __init__.py  collision_detector.py  execution_loop.py  interactive_handler.py  retry_handler.py  stats_manager.py  transaction_processor.py
src/mass_find_replace/core/processor/: __init__.py  batch_processor.py  group_processor.py  stream_processor.py
src/mass_find_replace/core/scanner/: __init__.py  binary_handler.py  content_scanner.py  directory_walker.py  file_type_detector.py  item_processor.py  transaction_builder.py
src/mass_find_replace/replacer/: __init__.py  executor.py  loader.py  logging_utils.py  normalization.py  patterns.py  state.py  validation.py
src/mass_find_replace/ui/: __init__.py  display.py
src/mass_find_replace/utils/: __init__.py  file_encoding.py  file_locking.py  json_handlers.py  logger.py  logging_utils.py
src/mass_find_replace/workflow/: __init__.py  executor.py  scanner.py  validation.py
tests/: conftest.py  coverage_summary.md  test_additional_coverage.py  test_binary_handling.py  test_binary_simple.py  test_comprehensive_coverage.py  test_coverage_fixes.py  test_coverage_improvement.py  test_coverage_improvements.py  test_edge_cases.py  test_final_coverage.py  test_final_coverage_push.py  test_final_fixes.py  test_github_integration.py  test_mass_find_replace.py  test_surgical_replacements.py
