[project]
name = "mass-find-replace"
version = "0.1.0"
description = "A sophisticated Python tool for safe, surgical find-and-replace operations across directory structures"
authors = [
    {name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "prefect>=3.0.0",
    "chardet>=4.0.0",
    "isbinary>=1.0.0",
    "pathspec>=0.12.0",
    "striprtf>=0.0.26",
]
keywords = ["find-replace", "refactoring", "cli", "unicode", "encoding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Emasoft/MFR"
Repository = "https://github.com/Emasoft/MFR"
Issues = "https://github.com/Emasoft/MFR/issues"

[project.scripts]
mfr = "mass_find_replace:main_cli"
mass-find-replace = "mass_find_replace:main_cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "*.py",
    "replacement_mapping.json",
]
exclude = [
    "test_*.py",
    "conftest.py",
    "setup_dev_tools.sh",
]
